# nag

./: .dockerignore  .env.development  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.yaml  mise.toml
.github/: dependabot.yml
.github/workflows/: build-container.yaml  ci.yaml  ci.yml  release.yaml
.mise/tasks/: backdate-chores.sh  seed-chores.sh
.zed/: settings.json
crates/nag-server/: Cargo.toml
crates/nag-server/migrations/: 20260201223143_initial_schema.down.sql  20260201223143_initial_schema.up.sql  20260222031000_notifications.down.sql  20260222031000_notifications.up.sql  20260223211312_add_once_in_a_while_schedule.down.sql  20260223211312_add_once_in_a_while_schedule.up.sql
crates/nag-server/src/: config.rs  lib.rs  main.rs
crates/nag-server/src/db/: chores.rs  completions.rs  mod.rs  models.rs  notifications.rs  tags.rs  users.rs
crates/nag-server/src/http/: mod.rs  static_files.rs
crates/nag-server/src/http/middleware/: mod.rs
crates/nag-server/src/http/models/: chore.rs  error.rs  mod.rs  tag.rs
crates/nag-server/src/http/routes/: auth.rs  mod.rs  scalar.rs
crates/nag-server/src/http/routes/api/: chores.rs  mod.rs  tags.rs
crates/nag-server/src/services/: chore_service.rs  mod.rs  oidc.rs
crates/nag-server/src/services/notifications/: mod.rs  telegram.rs
crates/nag-server/tests/: api_chores.rs  api_completions.rs  api_health.rs  api_tags.rs  notifications.rs
crates/nag-server/tests/common/: mod.rs
dev/oidc-provider/: package.json  server.mjs
docker/: docker-entrypoint.sh
frontend/: .gitignore  .oxlintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/components/: chore-card.tsx.html  done-button.tsx.html  index.html
frontend/coverage/hooks/: index.html  use-chores.ts.html
frontend/coverage/lib/: api.ts.html  cron.ts.html  date.ts.html  index.html  utils.ts.html
frontend/src/: index.css  main.tsx
frontend/src/components/: chore-card.test.tsx  chore-card.tsx  chore-detail-panel.tsx  chore-detail.tsx  chore-form-panel.tsx  chore-form.tsx  collapsible-section.tsx  completion-history.tsx  dark-mode-toggle.tsx  done-button.tsx  empty-state.tsx  quick-add-palette.tsx  schedule-builder.tsx  schedule-preview.tsx  tag-input.tsx  user-menu.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  drawer.tsx  dropdown-menu.tsx  input.tsx  select.tsx  sheet.tsx  sonner.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx
frontend/src/hooks/: use-auth.ts  use-chore-form.tsx  use-chores.test.tsx  use-chores.ts  use-config.ts  use-tags.ts  use-theme.ts
frontend/src/lib/: api.ts  cron.test.ts  cron.ts  date.test.ts  date.ts  tag-colors.ts
frontend/src/routes/: __root.tsx  chores.tsx  index.tsx  tags.tsx
frontend/src/test/: setup.ts  test-utils.tsx
frontend/src/test/mocks/: handlers.ts  server.ts
