[package]
name = "nag-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true

color-eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

utoipa.workspace = true
utoipa-axum.workspace = true
problem_details.workspace = true

envconfig.workspace = true
dotenvy.workspace = true

sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
croner.workspace = true

rust-embed.workspace = true
mime_guess.workspace = true

[dev-dependencies]
axum-test.workspace = true
